tests/specs/ecosystem/std/io/0_201_0.test
std/io/0.201.0
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-type]: missing explicit type in the public API
  --> /slice_long_to_bytes.ts:11:3
   | 
11 |   dest = Array.from<number>({ length: 8 }),
   |   ^^^^ this symbol is missing an explicit type
   | 
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


